Closed
Bug 1485119
Opened 7 years ago
Closed 7 years ago
Assertion failure: JS::StringIsASCII(message.get()) with parseBin shell function
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla63
| Tracking | Status | |
|---|---|---|
| firefox63 | --- | fixed |
People
(Reporter: anba, Assigned: Waldo)
Details
Attachments
(1 file)
Test case:
---
parseBin(new ArrayBuffer(0), {format: "\u{101}"})
---
Asserts with:
---
Assertion failure: JS::StringIsASCII(message.get()), at /home/andre/git/mozilla-central/js/src/vm/JSContext.cpp:413
---
| Assignee | ||
Comment 1•7 years ago
|
||
I imagine I'm racing you to land this, now that I see what's buggy. Oh well.
Attachment #9002946 -
Flags: review?(andrebargull)
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → jwalden+bmo
Status: NEW → ASSIGNED
| Reporter | ||
Comment 2•7 years ago
|
||
Comment on attachment 9002946 [details] [diff] [review]
Don't pass the result of ValueToPrintableUTF8 to a function called JS_ReportErrorASCII
Review of attachment 9002946 [details] [diff] [review]:
-----------------------------------------------------------------
(In reply to Jeff Walden [:Waldo] from comment #1)
> I imagine I'm racing you to land this, now that I see what's buggy. Oh well.
I didn't have immediate plans to work on this bug. The only thing this patch does is that it'll create a small merge conflict with bug 1485066 for me. :-)
Attachment #9002946 -
Flags: review?(andrebargull) → review+
Pushed by jwalden@mit.edu:
https://hg.mozilla.org/integration/mozilla-inbound/rev/03ad53dbb0ae
Don't pass the result of ValueToPrintableUTF8 to a function called JS_ReportErrorASCII. r=anba
Comment 4•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in
before you can comment on or make changes to this bug.
Description
•