Bug 1485119 - Don't pass the result of ValueToPrintableUTF8 to a function called JS_ReportErrorASCII.  r=anba